--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codebreakers</title>
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://anjali2201.github.io/Codebreakers/css/style.css" rel="stylesheet" type="text/css">
     
 
 </head>
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar background h-nav-resp">
         <ul class="nav-list v-class-resp">
-            <div class="logo"><img src="/image/logo.jpg" alt="logo"></div>
+            <div class="logo"><img src="https://anjali2201.github.io/Codebreakers/image/logo.jpg" alt="logo"></div>
             <li><a href="#Home">Home</a></li>
             <li><a href="#About us">Projects</a></li>
             <li><a href="#achievements">Achievements</a></li>
@@ -56,7 +56,7 @@
             <button class="btn">Join us</button>
         </div>
     </section>
-    <script src="/js/resp.js"></script>
+    <script src="https://anjali2201.github.io/Codebreakers/js/resp.js"></script>
 </body>
 
 </html>
