--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="background firstsection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="text-big"> CODEBREAKERS CLUB</p>
+                <p class="text-big"> CODING CLUB</p>
                 <p class="text-small">Eat.Sleep.Code.Repeat </p>
             </div>
             <div class="secondhalf">
@@ -48,8 +48,7 @@
             ABOUT US
         </p>
         <p class="sectionsubtag">
-            With a motive to provide a common platform for Interdisciplinary technical activities of the college, Codebreakers was launched . Codebreakers is a coding club of Shri Ramdeobaba College of Engineering and Management,Nagpur. The club consists of self-motivated students who gather together to come up with some or the other new and innovative ideas and work on them. It aims to technically strengthen the students by integrating their skills in the various fields of engineering & technology, so as to cope up with the highly competitive environment.
-            Many activities are conducted by the club in order to help the students explore and learn some skill which might help them in future. The club also aims competitions that are organized by other colleges, in which the students have performed exceptionally well.
+            With a motive to provide a common platform for Interdisciplinary technical activities of the college.
         </p>
         <div class="button">
             <button class="btn">Follow</button>
