--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codebreakers</title>
-    <link href="https://anjali2201.github.io/Codebreakers/css/style.css" rel="stylesheet" type="text/css">
+    <title>CodingClub</title>
+    <link href="https://anjali2201.github.io/CodingClub/css/style.css" rel="stylesheet" type="text/css">
     
 
 </head>
@@ -55,7 +55,7 @@
             <button class="btn">Join us</button>
         </div>
     </section>
-    <script src="https://anjali2201.github.io/Codebreakers/js/resp.js"></script>
+    <script src="https://anjali2201.github.io/CodingClub/js/resp.js"></script>
 </body>
 
 </html>
